--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 </head>
 <body>
     <div class="mainWrap">
-        <div class="urlButton1" onclick="location.href='./page/csrs1.html'">ColonoScopy<br>Reader Study<br>1st</div>
-        <div class="urlButton2" onclick="location.href='./page/csrs2.html'">ColonoScopy<br>Reader Study<br>2nd</div>
-        <div class="urlButton3" onclick="location.href='./page/csrs3.html'">ColonoScopy<br>Reader Study<br>3rd</div>
+        <div class="urlButton1" onclick="location.href='./page/csrs1.html'">image<br>1</div>
+        <div class="urlButton2" onclick="location.href='./page/csrs2.html'">image<br>2</div>
+        <div class="urlButton3" onclick="location.href='./page/csrs3.html'">image<br>3</div>
     </div>
 </body>
 </html>
