--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <script src="https://code.jquery.com/jquery-3.6.3.js" integrity="sha256-nQLuAZGRRcILA+6dMBOvcRh5Pe310sBpanc6+QBmyVM=" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css?family=Nanum+Gothic" rel="stylesheet">
     <link rel="stylesheet" href="./style.css">
-    <title>ColonoScopy Reader Study</title>
+    <title>ColonoScopy Reader Study TEST</title>
     <script>
     </script>
 </head>
