--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
     <script src="https://code.jquery.com/jquery-3.6.3.js" integrity="sha256-nQLuAZGRRcILA+6dMBOvcRh5Pe310sBpanc6+QBmyVM=" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css?family=Nanum+Gothic" rel="stylesheet">
     <link rel="stylesheet" href="./style.css">
-    <title>ColonoScopy Reader Study TEST</title>
+    <title>ColonoScopy Reader Study</title>
     <script>
     </script>
 </head>
 <body>
     <div class="mainWrap">
-        <div class="urlButton1" onclick="location.href='./page/csrs1.html'">image<br>1</div>
-        <div class="urlButton2" onclick="location.href='./page/csrs2.html'">image<br>2</div>
-        <div class="urlButton3" onclick="location.href='./page/csrs3.html'">image<br>3</div>
+        <div class="urlButton1" onclick="location.href='./page/csrs1.html'">ColonoScopy<br>Reader Study<br>1st</div>
+        <div class="urlButton2" onclick="location.href='./page/csrs2.html'">ColonoScopy<br>Reader Study<br>2nd</div>
+        <div class="urlButton3" onclick="location.href='./page/csrs3.html'">ColonoScopy<br>Reader Study<br>3rd</div>
     </div>
 </body>
 </html>
